@@ -5,6 +5,7 @@
 === 1.0.31 ===
 * Added audio pre-mixing controls.
 * Added left/right and mid/side linking in the UI.
+* Updated build scripts and dependencies.
 
 === 1.0.30 ===
 * Added overlay support for Sidechain and Mix.
